--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>[template]</title>
   </head>
   <body>
-    <div class="wrapper">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-      <div>4</div>
+    <div class="wrapper gap-10">
+      <div class="anim-1">1</div>
+      <div class="anim-1">2</div>
+      <div class="anim-1">3</div>
+      <div class="anim-1">4</div>
     </div>
     <script type="module" src="/src/index.ts"></script>
   </body>
