--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div class="wrapper gap-10">
-      <div class="anim-1">1</div>
-      <div class="anim-1">2</div>
-      <div class="anim-1">3</div>
-      <div class="anim-1">4</div>
+      <div class="anim-1 element">1</div>
+      <div class="anim-1 element">2</div>
+      <div class="anim-1 element">3</div>
+      <div class="anim-1 element">4</div>
     </div>
     <script type="module" src="/src/index.ts"></script>
   </body>
