Add debug class

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="anim-1 element">3</div>
       <div class="anim-1 element">4</div>
     </div>
+    <div class="wrapper">coucou</div>
     <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
