--- a/index.html
+++ b/index.html
@@ -13,7 +13,33 @@
       <div class="anim-1 element">3</div>
       <div class="anim-1 element">4</div>
     </div>
-    <div class="wrapper">coucou</div>
+    <div class="wrapper gap-10 vertical">
+      <div class="row">
+        <div class="anim-2 element">1</div>
+        <div class="anim-2 element">2</div>
+      </div>
+      <div class="row">
+        <div class="anim-2 element">3</div>
+        <div class="anim-2 element">4</div>
+      </div>
+      <div class="row">
+        <div class="anim-2 element">5</div>
+        <div class="anim-2 element">6</div>
+      </div>
+      <div class="row">
+        <div class="anim-2 element">7</div>
+        <div class="anim-2 element">8</div>
+      </div>
+      <div class="row">
+        <div class="anim-2 element">9</div>
+        <div class="anim-2 element">10</div>
+      </div>
+      <div class="row">
+        <div class="anim-2 element">11</div>
+        <div class="anim-2 element">12</div>
+      </div>
+    </div>
+    <div class="wrapper"></div>
     <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
